# cfa-vaccine-prevented-burden-foppa

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: pytest.yaml
burden/: __init__.py
docs/: index.md
scripts/: config.json  correlate.py  demo.py  estimate.py  helpers.py  qualitative.py  simulate.py  viz.py
tests/: test_foppa.py  test_simulation.py
