[project]
name = "burden"
version = "1.0.0"
description = "Compare the prevented burden estimated by multiple analytical methods"
authors = [
    { name = "Fuhan Yang", email = "ab32@cdc.gov" },
    { name = "Scott Olesen", email = "ulp7@cdc.gov" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.1.3",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "detect-secrets>=1.5.0",
    "mkdocstrings-python>=1.15.0",
    "mkdocstrings>=0.28.0",
    "mkdocs-material>=9.6.20",
    "mkdocstrings[python]>=0.28.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.4",
    "pytest>=9.0.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
